# object_detection_project

./: CMakeLists.txt  FrameProcessor.cpp  FrameProcessor.h  ObjectDetector.cpp  ObjectDetector.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
models/: 下载yolov4.weights
